# SaDPA-2

./: .gitignore  CMakeLists.txt  README.md
Classwork 1/: Classwork 1.sln
Classwork 1/Classwork 1/: Classwork 1.cpp  Classwork 1.vcxproj  Classwork 1.vcxproj.filters
Classwork 2/: Classwork 2.sln
Classwork 2/Classwork 2/: Classwork 2.cpp  Classwork 2.vcxproj  Classwork 2.vcxproj.filters  TextFile1.txt
Classwork1/: CMakeLists.txt  main.cpp
Classwork2/: CMakeLists.txt  main.cpp
Classwork3/: main.cpp
Practice 1_1/: Practice 1_1.sln
Practice 1_1/Practice 1_1/: Practice 1_1.cpp  Practice 1_1.vcxproj  Practice 1_1.vcxproj.filters
Practice 1_2/: Practice 1_2.sln
Practice 1_2/Practice 1_2/: Practice 1_2.cpp  Practice 1_2.vcxproj  Practice 1_2.vcxproj.filters
Practice 2_1/: Practice 2_1.sln
Practice 2_1/Practice 2_1/: A.txt  B.txt  Practice 2_1.cpp  Practice 2_1.vcxproj  Practice 2_1.vcxproj.filters  fileOperations.cpp  fileOperations.h  textFileOperations.cpp  textFileOperations.h
Practice 2_2/: Practice 2_2.sln
Practice 2_2/Practice 2_2/: Practice 2_2.cpp  Practice 2_2.vcxproj  Practice 2_2.vcxproj.filters  TextFile.txt  binFileOperations.cpp  binFileOperations.h
Practice1_1/: CMakeLists.txt  main.cpp
Practice1_2/: CMakeLists.txt  main.cpp
Practice2_1/: CMakeLists.txt  main.cpp  textFileOperations.cpp  textFileOperations.h
Practice2_2/: BinFileOperations.cpp  BinFileOperations.h  CMakeLists.txt  main.cpp
Practice3/: BinFileOperations.cpp  binHashTable.cpp  hashTableOperations.cpp  main.cpp
Practice3/include/: BinFileOperations.h  binHashTable.h  hashTableOperations.h
Practice4/: PBTree.cpp  PBTree.h  main.cpp  perfectBalancedTree.cpp  perfectBalancedTree.h
Practice5/: BinFileOperations.cpp  RBTree.cpp  main.cpp
Practice5/include/: BinFileOperations.h  RBTree.h  binRBTOperations.h
Practice5_1/: BSTree.cpp  BinFileOperations.cpp  RBTree.cpp  binBSTOperations.cpp  binRBTOperations.cpp  main.cpp
Practice5_1/include/: BSTree.h  BinFileOperations.h  RBTree.h  binBSTOperations.h  binRBTOperations.h
Practice5_2/: BSTree.cpp  RBTree.cpp  binRBTOperations.cpp  hashTableOperations.cpp  main.cpp  perfectBalancedTree.cpp
Practice5_2/include/: BSTree.h  BinFileOperations.h  RBTree.h  binRBTOperations.h  hashTableOperations.h  perfectBalancedTree.h
Practice5_3/: BSTree.cpp  RBTree.cpp  hashTableOperations.cpp  main.cpp  speedTest.cpp
Practice5_3/include/: BSTree.h  RBTree.h  hashTableOperations.h  speedTest.h
Practice6/: Graph.h  main.cpp
Practice6_1/: Graph.cpp  main.cpp
Practice6_2/: camelot.cpp  camelot.h  main.cpp
Practice7/: grassHopper.cpp  grassHopper.h  main.cpp
Practice8/: HuffmanAlgorithm.cpp  RLE.cpp
