cmake_minimum_required (VERSION 3.8)

project ("SaPDA-2")
set(CMAKE_CXX_STANDARD 23)

add_executable(Classwork1 "Classwork1/main.cpp")
add_executable(Classwork2 "Classwork2/main.cpp")
add_executable(Classwork3 "Classwork3/main.cpp")
add_executable(Practice1_1 "Practice1_1/main.cpp")
add_executable(Practice1_2 "Practice1_2/main.cpp")
add_executable(Practice2_1 "Practice2_1/main.cpp" "Practice2_1/textFileOperations.cpp")
add_executable(Practice2_2 "Practice2_2/main.cpp" "Practice2_2/binFileOperations.cpp")
add_executable(Practice3 "Practice3/main.cpp" "Practice3/hashTableOperations.cpp" "Practice3/binFileOperations.cpp" "Practice3/binHashTable.cpp")
add_executable(Practice4 "Practice4/main.cpp" "Practice4/PBTree.cpp")
add_executable(Practice5_1 "Practice5_1/main.cpp" "Practice5_1/BSTree.cpp" "Practice5_1/BinFileOperations.cpp" "Practice5_1/binBSTOperations.cpp")
add_executable(Practice5_2 "Practice5_2/main.cpp" "Practice5_2/RBTree.cpp" "Practice5_2/BinFileOperations.cpp" "Practice5_2/binRBTOperations.cpp")
add_executable(Practice5_3 "Practice5_3/main.cpp" "Practice5_3/hashTableOperations.cpp" "Practice5_3/RBTree.cpp" "Practice5_3/BSTree" "Practice5_3/speedTest.cpp")
add_executable(Practice6_1 "Practice6_1/main.cpp" "Practice6_1/Graph.cpp")
add_executable(Practice6_2 "Practice6_2/main.cpp" "Practice6_2/camelot.cpp")
add_executable(Practice7 "Practice7/main.cpp" "Practice7/grassHopper.cpp")
add_executable(Practice8_RLE "Practice8/RLE.cpp")
add_executable(Practice8_Huffman "Practice8/HuffmanAlgorithm.cpp")
